--- a/src/main/resources/templates/VoteSondage.html
+++ b/src/main/resources/templates/VoteSondage.html
@@ -13,6 +13,9 @@
     <input type="text" th:field="*{session}">
     <p>Description :</p>
     <input type="text" th:field="*{description}">
+    <p>Date :</p>
+    <input type="date" th:field="*{date}">
+
     <input type="submit" value="Save">
 
 </form>
