--- a/src/main/resources/templates/sondage.html
+++ b/src/main/resources/templates/sondage.html
@@ -5,31 +5,32 @@
     <title>Sondage PainKill</title>
 </head>
 <body>
-    <h1>Sondage PainKill</h1>
-        <h2>Liste des sondages</h2>
+<h1>Liste des sondages</h1>
 
-            <form action="#" th:action="@{/sdg}" th:object="${newSondage}" method="POST">
-                <p>Id: </p>
-                <input type="text" th:field="*{id}">
-                <p>Name: </p>
-                <input type="text" th:field="*{name}">
-                <p>Place: </p>
-                <input type="text" th:field="*{place}">
-                <p>Date: </p>
-                <input type="text" th:field="*{date}">
-                <p>Description: </p>
-                <input type="text" th:field="*{description}">
-                <input type="submit" value="Valider">
-            </form>
+<div>
+    <table width="50%" border="1">
+        <tr>
+            <td><b>ID</b></td>
+            <td><b>Name</b></td>
+            <td><b>Place</b></td>
+            <td><b>Date</b></td>
+            <td><b>Description</b></td>
+            <td><b>Vote Sondage</b></td>
+        </tr>
+        <tr th:each="sdg:${sdglist}">
+            <td th:text="${sdg.id}" ></td>
+            <td th:text="${sdg.name}" ></td>
+            <td th:text="${sdg.place}" ></td>
+            <td th:text="${sdg.date}" ></td>
+            <td th:text="${sdg.description}" ></td>
+            <td><a th:href="@{/VoteSondage}"> <input type="submit" class="btn btn-primary" value="Voter"></a></td>
+        </tr>
 
-            <div th:each="sdg:${sdglist}">
-                <p>Id: </p><p th:text="${sdg.id}"></p>
-                <p>Name: </p><p th:text="${sdg.name}"></p>
-                <p>Place: </p><p th:text="${sdg.place}"></p>
-                <p>Date: </p><p th:text="${sdg.date}"></p>
-                <p>Description: </p><p th:text="${sdg.description}"></p>
+    </table>
+</div>
+<br></br>
+<a th:href="@{/creation_sondage}"> <input type="submit" class="btn btn-primary" value="Créer un nouveau sondage"></a>
 
-            </div>
 
 </body>
 </html>
