Finalisation et corrections bouton participer

--- a/src/main/resources/templates/VoteSondage.html
+++ b/src/main/resources/templates/VoteSondage.html
@@ -15,8 +15,9 @@
     <input type="text" th:field="*{description}">
     <p>Date :</p>
     <input type="date" th:field="*{date}">
-
     <input type="submit" value="Save">
+
+
 
 </form>
         <div th:each="vote:${Vote}">
@@ -24,6 +25,11 @@
             <p th:text="${vote.session}"></p>
             <p th:text="${vote.date}"></p>
             <p th:text="${vote.description}"></p>
+            <p>Participation :</p>
+            <p th:text="${vote.status} ? 'Participe' : 'Ne participe pas'"></p>
+            <form th:action="@{'/UpdateVote?id='+${vote.id}}" th:object="${UpdateVote}" method="post">
+               <input type="submit" value="Participer" >
+            </form>
     </div>
 </body>
 </html>
