liaison des branches

--- a/src/main/resources/templates/ClientPage.html
+++ b/src/main/resources/templates/ClientPage.html
@@ -8,7 +8,7 @@
     <body>
         <h1 th:text="Bonjour + ' ' +${client.nom}"></h1>
 
-    <a th:href="@{'/monCompte?id='+${client.id}}"> <input type="submit" class="btn btn-primary" value="mon compte" > </a>
+    <a th:href="@{'/monCompte?id='+${client.idUser}}"> <input type="submit" class="btn btn-primary" value="mon compte" > </a>
     <form th:action="@{/logout}" method="post">
         <input type="submit" class="btn btn-primary" value="Logout" />
     </form>
