--- a/src/main/resources/templates/GestionCompte.html
+++ b/src/main/resources/templates/GestionCompte.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"  integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
-    <form th:action="@{'/monCompte?id='+${client.id}}" th:object="${modificationCompte}" method="POST" style="max-width: 350px;margin: 0 auto">
+    <form th:action="@{'/monCompte?id='+${client.idUser}}" th:object="${modificationCompte}" method="POST" style="max-width: 350px;margin: 0 auto">
     <p th:text="'Nom: '+${client.nom}"></p>
     <p><label><input type="text" th:field="*{nom}" class="form-control" name="nom" placeholder="Nouveau nom" autofocus/></label></p>
     <p th:text="'Prenom: '+${client.prenom}"></p>
@@ -21,8 +21,8 @@
     <p><input type="submit" class="btn btn-primary" value="Confirmer"></p>
     </form >
 
-    <form th:action="@{/logout}" method="post">
-        <p style="margin-left: 10px"><a th:href="'/client?id='+${client.id}"><input type="button" class="btn btn-primary" value="Acceuil"></a><input type="submit" class="btn btn-primary" value="Logout" style="margin-left: 10px"/></p>
-    </form>
+
+    <p style="margin-left: 10px"><a th:href="'/sondage?id='+${client.idUser}"><input type="button" class="btn btn-primary" value="Acceuil"></a></p>
+
 </body>
 </html>
